auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e84e5deb",
+   "id": "8287e8c5",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3f029f",
+   "id": "d08c2ddb",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f69d4a65",
+   "id": "55e13070",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56cdebe0",
+   "id": "7972e1bc",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d93a8d5d",
+   "id": "270dfecb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "281d5a92",
+   "id": "ff5ae945",
    "metadata": {
     "hide-output": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f35b068",
+   "id": "482ac507",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60d52d25",
+   "id": "2cb04f8a",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35bb5d54",
+   "id": "49395d30",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c99cb8bc",
+   "id": "37d538e2",
    "metadata": {
     "hide-output": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "219ddef1",
+   "id": "3119cf2c",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dc4372a",
+   "id": "48cf0de7",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab0cf80e",
+   "id": "4046fc16",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db2a408",
+   "id": "476b0205",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de769474",
+   "id": "2b9ff157",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0c34ee",
+   "id": "27838ddd",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f08214db",
+   "id": "0cf81719",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5eb07b8",
+   "id": "c4b72181",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8aee374",
+   "id": "62c1db72",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77c49f45",
+   "id": "99d58a73",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c17a47b3",
+   "id": "a393d18f",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d78379b",
+   "id": "58ae4130",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2887f3a0",
+   "id": "94964cff",
    "metadata": {
     "hide-output": false
    },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47064793",
+   "id": "d8d88144",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe605ece",
+   "id": "2dc442cf",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06ce7f3d",
+   "id": "6305803c",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "693957b1",
+   "id": "e93cadb7",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26109d53",
+   "id": "b0f79fa5",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b7e564e",
+   "id": "ada359e3",
    "metadata": {
     "hide-output": false
    },
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d12ac43e",
+   "id": "3f447f6a",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce232494",
+   "id": "f0b7a139",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db063887",
+   "id": "a63747b1",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe60798",
+   "id": "ddcad96d",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edad78d5",
+   "id": "1c2938e2",
    "metadata": {
     "hide-output": false
    },
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96e0caa9",
+   "id": "c0b7e8fb",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c8fc5dd",
+   "id": "cf25fec3",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2a5c319",
+   "id": "2a0742c4",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16dfadb8",
+   "id": "cf0c2ace",
    "metadata": {
     "hide-output": false
    },
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9653ff74",
+   "id": "9738bc98",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0abc5fc6",
+   "id": "58c272d5",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3392f19",
+   "id": "8aadd192",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40dd792e",
+   "id": "8ca416ed",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "284419d3",
+   "id": "4be2b041",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20967a90",
+   "id": "673ac84c",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a9d8c6e",
+   "id": "f11a382f",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64d3735c",
+   "id": "95a05631",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da1a941b",
+   "id": "cae34ca0",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1083,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67568035",
+   "id": "af0c9540",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcc13b9",
+   "id": "39a13e51",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "417f5afd",
+   "id": "e7f89938",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0f6b43e",
+   "id": "52323c3b",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14ba40c6",
+   "id": "bd2c2087",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15578ad6",
+   "id": "3e56df20",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c30461ac",
+   "id": "7e6bf8f2",
    "metadata": {
     "hide-output": false
    },
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e172f9c8",
+   "id": "c5c52424",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a3c4e35",
+   "id": "283aa500",
    "metadata": {
     "hide-output": false
    },
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba1ef9a",
+   "id": "0b22e2ac",
    "metadata": {
     "hide-output": false
    },
@@ -1278,7 +1278,7 @@
   }
  ],
  "metadata": {
-  "date": 1764821802.1816196,
+  "date": 1764836277.769477,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
