--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "54a50481",
+   "id": "4696dfdd",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0b43549",
+   "id": "032a151c",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb66eed",
+   "id": "29d6a814",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a366b1",
+   "id": "0ed9140f",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7de80e4",
+   "id": "3a1f70b8",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81a36323",
+   "id": "3e1e10cb",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d3441af",
+   "id": "9efb5ec2",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "130e225a",
+   "id": "d5a5349f",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19621925",
+   "id": "d2baead3",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -114,7 +114,7 @@
   }
  ],
  "metadata": {
-  "date": 1764821802.3355765,
+  "date": 1764836277.913526,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
