--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "777bf3ae",
+   "id": "e2b1802d",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d04086",
+   "id": "d63c2d34",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b42163b",
+   "id": "f907f30b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b489387",
+   "id": "77c9bd96",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95cc4d15",
+   "id": "55f625fa",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdcb55d1",
+   "id": "2cefcf55",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29cfa5a5",
+   "id": "52687e12",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "372bb732",
+   "id": "b402b449",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed83f159",
+   "id": "7fb926cb",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "938b2cf5",
+   "id": "bfbbb7d5",
    "metadata": {
     "hide-output": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70e9eb46",
+   "id": "156c157e",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95cc5050",
+   "id": "084e24e5",
    "metadata": {
     "hide-output": false
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df0661ec",
+   "id": "8a08b959",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2270124a",
+   "id": "9489b916",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "625e3417",
+   "id": "342de812",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b39f3b4a",
+   "id": "95a71a85",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7403e13",
+   "id": "829c184e",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c859b61",
+   "id": "863e7cdf",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21d9e80d",
+   "id": "230208c6",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3519c406",
+   "id": "559b0f86",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9e3c8e9",
+   "id": "23883c3a",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a86458",
+   "id": "f391f447",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a72627b",
+   "id": "fcc8070e",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43389745",
+   "id": "5add2069",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f107a867",
+   "id": "96f3b2ec",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d07caa",
+   "id": "cbf088bc",
    "metadata": {
     "hide-output": false
    },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40693548",
+   "id": "35e908a8",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33f92112",
+   "id": "55b934ac",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e4654e7",
+   "id": "6f034927",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae75d78c",
+   "id": "9c7275c6",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "890c1dbb",
+   "id": "adaf2378",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "493683dc",
+   "id": "7c779b79",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fdfe753",
+   "id": "afab6647",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51e6980",
+   "id": "727f762d",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f492dd48",
+   "id": "d14da32e",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aa56462",
+   "id": "91e3ffcb",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b823359d",
+   "id": "0608c4be",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28c7788e",
+   "id": "783c9dd2",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b21fb619",
+   "id": "f1ba8127",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1f45c02",
+   "id": "68a328dd",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e6838c",
+   "id": "6a1dc813",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79eb1889",
+   "id": "ebb4119c",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ef9bd7e",
+   "id": "ef781bd1",
    "metadata": {
     "hide-output": false
    },
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c73edc5",
+   "id": "134de5e1",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4acb3a4e",
+   "id": "f65ce834",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8197f2",
+   "id": "1eda4c87",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "746f757c",
+   "id": "c7ed56c3",
    "metadata": {
     "hide-output": false
    },
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "958962b2",
+   "id": "204eef86",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a6d569b",
+   "id": "97887edd",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab86786c",
+   "id": "ff2649ba",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31b25e8f",
+   "id": "b287f722",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a1b9595",
+   "id": "3878488d",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ba42ae",
+   "id": "e4a80754",
    "metadata": {
     "hide-output": false
    },
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f4a5f1",
+   "id": "aaf6bc57",
    "metadata": {
     "hide-output": false
    },
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "745a5cab",
+   "id": "edb0a420",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "010093df",
+   "id": "a9cacbd9",
    "metadata": {
     "hide-output": false
    },
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61a83969",
+   "id": "40d1d1b9",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22d1fc13",
+   "id": "5d3d4a1b",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "295cdd35",
+   "id": "41970ac3",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   }
  ],
  "metadata": {
-  "date": 1764821802.7433646,
+  "date": 1764836278.295937,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
