--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33a09ab9",
+   "id": "486d8923",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f02034f3",
+   "id": "500571ea",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dfcff2f",
+   "id": "0fe70f2c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "065d1ef1",
+   "id": "b1f5d513",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a861a84d",
+   "id": "0c01471a",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9e8b78",
+   "id": "e0d64eb4",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d66511a",
+   "id": "d12bac04",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4147b448",
+   "id": "2c9f0279",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab38f4d",
+   "id": "2a808555",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b63c52e8",
+   "id": "4951d652",
    "metadata": {
     "hide-output": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572788d9",
+   "id": "c8a1807e",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb13093",
+   "id": "d1d56ce9",
    "metadata": {
     "hide-output": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02c08e21",
+   "id": "c6ecd7e5",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddcb2168",
+   "id": "c01ac2d5",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4212e04",
+   "id": "d5e28e71",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0bd7f03",
+   "id": "d0657cf4",
    "metadata": {
     "hide-output": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fd35186",
+   "id": "645fe6ea",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86423c47",
+   "id": "ca3d1a83",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36f213e3",
+   "id": "4874a5b8",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7755e209",
+   "id": "592717bf",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b43a19",
+   "id": "95670eb5",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bc9dab2",
+   "id": "819ba49f",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43164b81",
+   "id": "354350f0",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2006b32",
+   "id": "e174dbd8",
    "metadata": {
     "hide-output": false
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91960d32",
+   "id": "78437893",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7932de9",
+   "id": "0d468982",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "313c0a28",
+   "id": "b27c3e79",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf15cd01",
+   "id": "2b875b16",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee8ae489",
+   "id": "c257c9bd",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b2d55fa",
+   "id": "f9d20636",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e010c9a",
+   "id": "743489ab",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3f4c1cb",
+   "id": "b4cc123d",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74d93c9e",
+   "id": "849ad6e7",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e68a09e3",
+   "id": "21beac24",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27c5a19d",
+   "id": "7b48c3d1",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a426b5ee",
+   "id": "09f8ecfa",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "820f9ee3",
+   "id": "65af7c88",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92048c8a",
+   "id": "1d56808a",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deacbe1b",
+   "id": "5e2f0867",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   }
  ],
  "metadata": {
-  "date": 1764821802.8816047,
+  "date": 1764836278.426992,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
