--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0480a04f",
+   "id": "1fc574ab",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6260a1c6",
+   "id": "79e5e558",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45f47baa",
+   "id": "8bc67ae6",
    "metadata": {},
    "source": [
     "# Troubleshooting\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf3e64a",
+   "id": "fc8aab57",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdcd2e81",
+   "id": "bb1846eb",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -91,7 +91,7 @@
   }
  ],
  "metadata": {
-  "date": 1764821802.908678,
+  "date": 1764836278.4532108,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
