--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d2397d37",
+   "id": "b569ae81",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1687175",
+   "id": "0620c79e",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3e348e1",
+   "id": "b2a266ad",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a73bc80",
+   "id": "a84cb8aa",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "433a5f67",
+   "id": "5b71add3",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c02480e7",
+   "id": "8cce8a8d",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44b702a2",
+   "id": "7503b02f",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa7940c1",
+   "id": "debeaab2",
    "metadata": {},
    "source": [
     "## The Model"
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e353b8c1",
+   "id": "baa9c06b",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4f9a8bc",
+   "id": "32cca5cb",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -189,7 +189,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-6c3cd727-07df-470b-819d-9ae8aff4ba8b'></a>\n",
+    "<a id='equation-92f27e68-30e8-43dd-a9e2-45cd185d1f34'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -202,7 +202,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-da472727-67d4-4020-97e9-4f4383591223'></a>\n",
+    "<a id='equation-6e181f31-86f0-45b2-b120-1198b6b9cbde'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d2c5ac",
+   "id": "00aabd9a",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -256,7 +256,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-4a0f58c0-0f20-482f-8e29-2dbebd418baa'></a>\n",
+    "<a id='equation-1a185325-6657-4fe6-9a3e-f388af066a7a'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -266,7 +266,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-ab49aecf-c8a5-4db8-ad1c-a81d99984928'></a>\n",
+    "<a id='equation-181aefb3-bb9f-4e2d-bafb-542b35da3a37'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -280,7 +280,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-e090b116-9846-4ec5-993a-8ee96785a083'></a>\n",
+    "<a id='equation-2a602760-623b-4d92-b4d5-a2f6b359e502'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -290,7 +290,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-c4ea8d84-39ae-4530-ac72-390996d405dd'></a>\n",
+    "<a id='equation-a658a53d-4042-458b-b9e2-0cb382249481'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "132d0bc9",
+   "id": "dd3e3d74",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -315,7 +315,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-8453014b-7ebd-4960-8185-7cd85bef833f'></a>\n",
+    "<a id='equation-634bd0cb-0449-49eb-8e16-7a0efdf63194'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -327,7 +327,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-d982f54b-20a0-4409-8cb3-c910ca92a3d7'></a>\n",
+    "<a id='equation-625d04e5-f71c-41a7-abe7-71872312d920'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7de85a1c",
+   "id": "b39c02c8",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4316d265",
+   "id": "09000acf",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdb48ae2",
+   "id": "ed4868a2",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504677cd",
+   "id": "a4fafb92",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b145604",
+   "id": "e832413b",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f407f8d",
+   "id": "fb6f572b",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "864a6604",
+   "id": "de6da282",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08ff47e8",
+   "id": "b2a06c3c",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3512a7a6",
+   "id": "aa0efb7f",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba0aea66",
+   "id": "9d05558e",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df3a1b95",
+   "id": "84d05bcf",
    "metadata": {
     "hide-output": false
    },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21120081",
+   "id": "01624b93",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f6989b6",
+   "id": "595aa0c1",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d945aff5",
+   "id": "8d9384d6",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7420b5d1",
+   "id": "6c0d541d",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eacac86",
+   "id": "3778ecd1",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc79f49",
+   "id": "7077ff04",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b13c173",
+   "id": "80576e8f",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6440ed5f",
+   "id": "83809a0f",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74310799",
+   "id": "c1ffc9dc",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f6de0ac",
+   "id": "44dd2de3",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25126702",
+   "id": "ae8d0eeb",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e16cc26c",
+   "id": "3a60b69b",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7448b7ce",
+   "id": "8bb21c1d",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea24ef08",
+   "id": "7ec41869",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba80524",
+   "id": "e972d399",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d8b9bc",
+   "id": "b3c04e85",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8454d893",
+   "id": "6c34c1b4",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71728ad5",
+   "id": "e6a7969f",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55dffad3",
+   "id": "d07e4962",
    "metadata": {
     "hide-output": false
    },
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be99480b",
+   "id": "05d08590",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc4249c8",
+   "id": "bd955557",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "301ee4c5",
+   "id": "05b45033",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9187530f",
+   "id": "80a98834",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93def7e7",
+   "id": "e6a9d029",
    "metadata": {
     "hide-output": false
    },
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8508c78",
+   "id": "c15925f2",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e2e62a4",
+   "id": "3b75358c",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff88aa05",
+   "id": "98cc32ab",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e55006f8",
+   "id": "30866dda",
    "metadata": {
     "hide-output": false
    },
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ca7aa6",
+   "id": "39edbf00",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b1f2b1a",
+   "id": "0bafe8d1",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ebe469",
+   "id": "38185496",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6a80e5",
+   "id": "b580db66",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa5dda78",
+   "id": "c932fc6b",
    "metadata": {
     "hide-output": false
    },
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d0f2721",
+   "id": "e3cec6a7",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f56da9",
+   "id": "1d3ff8aa",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80eeb72f",
+   "id": "c3acfec8",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47d43f2a",
+   "id": "3f12557b",
    "metadata": {
     "hide-output": false
    },
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d293ea0",
+   "id": "edee6122",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d0a4d89",
+   "id": "90caf236",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00cc889d",
+   "id": "a4789d4d",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dafd641",
+   "id": "97aa8d17",
    "metadata": {
     "hide-output": false
    },
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0384de04",
+   "id": "dd0df755",
    "metadata": {
     "hide-output": false
    },
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dd0b486",
+   "id": "b2591b32",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c98460f",
+   "id": "ea1e2787",
    "metadata": {
     "hide-output": false
    },
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01dd3e28",
+   "id": "7b4ccd07",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b5b13d0",
+   "id": "0fe67cc8",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbf07375",
+   "id": "f3fc055b",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3163881e",
+   "id": "25cbdcfd",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0159cada",
+   "id": "d23a3665",
    "metadata": {
     "hide-output": false
    },
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8aa7371",
+   "id": "fcefbc51",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a02cbaba",
+   "id": "c4f3e798",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2be389bf",
+   "id": "55a13855",
    "metadata": {
     "hide-output": false
    },
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb357932",
+   "id": "eea4cbf5",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95b189cd",
+   "id": "423d8689",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de189af2",
+   "id": "15236656",
    "metadata": {
     "hide-output": false
    },
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "141c610a",
+   "id": "c6b74eb0",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09eb320f",
+   "id": "63e961a5",
    "metadata": {
     "hide-output": false
    },
@@ -1432,7 +1432,7 @@
   }
  ],
  "metadata": {
-  "date": 1764821802.2530868,
+  "date": 1764836277.836662,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
