--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "119a827c",
+   "id": "ca1ead88",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34e32f7",
+   "id": "40b15f78",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e9564e7",
+   "id": "3527656e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10125434",
+   "id": "1fdd3d96",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359ca4e4",
+   "id": "f5aa6a79",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1093bd63",
+   "id": "1a74d3db",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8645066d",
+   "id": "4735b54e",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a17b6173",
+   "id": "ec9857e1",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e64b4bbe",
+   "id": "a8307697",
    "metadata": {
     "hide-output": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "146de37b",
+   "id": "6fbfba2e",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a095f1d",
+   "id": "52fb461a",
    "metadata": {
     "hide-output": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "707bf25d",
+   "id": "272b89f4",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f15bd229",
+   "id": "8f261ba1",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "681e3fa2",
+   "id": "c551691c",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112feb0a",
+   "id": "6b5610ff",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5485acd6",
+   "id": "1e91b052",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "849c2f9a",
+   "id": "46e0d0de",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17485860",
+   "id": "fd61fc88",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b6f6945",
+   "id": "691e9d82",
    "metadata": {
     "hide-output": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09cdb648",
+   "id": "89d3b0f9",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5238158",
+   "id": "7d187cce",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "039e10cb",
+   "id": "4ef7940e",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6750c5",
+   "id": "84902020",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113b7186",
+   "id": "cbf1d1a0",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "765657aa",
+   "id": "ec0ae937",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e35a1d",
+   "id": "841c0e07",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6824a553",
+   "id": "7c617272",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1df08fd",
+   "id": "dfe68eff",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f0edb69",
+   "id": "26c29d3f",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "800fe4d8",
+   "id": "7fde052a",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c03f5d51",
+   "id": "8a7e8a6e",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c5000dd",
+   "id": "c47b073f",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6e8cfd5",
+   "id": "50131828",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38ab568b",
+   "id": "796af5ce",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e2edb6e",
+   "id": "ba86af9b",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "074a0ced",
+   "id": "21ffc747",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0230f036",
+   "id": "b7422aa1",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72bc4d4d",
+   "id": "3a21e58e",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "add5d6cf",
+   "id": "1fde6bdc",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb47d69d",
+   "id": "6c8c8012",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "229b7292",
+   "id": "7b48d77f",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba7bc274",
+   "id": "6ce84d19",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93257aef",
+   "id": "aea12ed0",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7ad606f",
+   "id": "956d9cc8",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7ed56c",
+   "id": "628d0aa7",
    "metadata": {
     "hide-output": false
    },
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d52fb2f0",
+   "id": "afa86d09",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba0cc35e",
+   "id": "619202e4",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "707d4403",
+   "id": "79a69a7c",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0efb54ac",
+   "id": "068fe578",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "869f7bd2",
+   "id": "af2cf484",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   }
  ],
  "metadata": {
-  "date": 1764821802.359885,
+  "date": 1764836277.9359038,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
