--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6492c862",
+   "id": "f6cafdf7",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9e5cb64",
+   "id": "7ba35c4b",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "befb743f",
+   "id": "db017b8c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72043462",
+   "id": "9cb86dd4",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f5cbd2a",
+   "id": "b45c435c",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d58b8a69",
+   "id": "ed43b862",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52339e76",
+   "id": "5c28770a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc76e5ec",
+   "id": "383ce6ba",
    "metadata": {
     "hide-output": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7de6627",
+   "id": "e5fe9f21",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75457bfe",
+   "id": "a7eeac2e",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82a82031",
+   "id": "5cbc9a3a",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e20e81e",
+   "id": "6d737a4c",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0c6d5b9",
+   "id": "931eca86",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a82e123",
+   "id": "b1b30e45",
    "metadata": {},
    "source": [
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0986b54",
+   "id": "956a5b11",
    "metadata": {
     "hide-output": false
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7c81b78",
+   "id": "d28a318f",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02835846",
+   "id": "e01c0bc7",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd5e4d9e",
+   "id": "5862964b",
    "metadata": {},
    "source": [
     "Let’s try running the code and generating a cross-section."
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca4898e",
+   "id": "b2b02f06",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88e28a66",
+   "id": "1b6163d1",
    "metadata": {},
    "source": [
     "We run the function again so we can see the speed without compile time."
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aad535d",
+   "id": "3b2551b9",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28a650d3",
+   "id": "ece235f1",
    "metadata": {},
    "source": [
     "Let’s produce the rank-size plot and check the distribution:"
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c4243f",
+   "id": "bbaa0073",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db111c9",
+   "id": "5e858cb4",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bc1b70c",
+   "id": "a766722e",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c02419",
+   "id": "4b74155a",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b24edb6",
+   "id": "b6692746",
    "metadata": {},
    "source": [
     "Let’s see if we get any speed gain"
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd22a521",
+   "id": "7a44b481",
    "metadata": {
     "hide-output": false
    },
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "619e6537",
+   "id": "6a55b74b",
    "metadata": {
     "hide-output": false
    },
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2535f666",
+   "id": "e866bd15",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30aef69d",
+   "id": "e06f5786",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc55cc9d",
+   "id": "83299ff2",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952496a7",
+   "id": "a9986777",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "797b71be",
+   "id": "1950771c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#kp_ex1)"
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ff7cc88",
+   "id": "889d8a04",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bea2ab7",
+   "id": "6e63ee00",
    "metadata": {},
    "source": [
     "Here are the run times."
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2652f5e9",
+   "id": "534f3f3b",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c42438",
+   "id": "953b7528",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba050e19",
+   "id": "c5d54c5e",
    "metadata": {},
    "source": [
     "This method might or might not be faster.\n",
@@ -665,7 +665,7 @@
   }
  ],
  "metadata": {
-  "date": 1764821802.5562594,
+  "date": 1764836278.118997,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
