--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bb0f007d",
+   "id": "386e2a84",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41e88e64",
+   "id": "7028e121",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be30fe69",
+   "id": "dda6e560",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e375e0",
+   "id": "dccc35b6",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed0e65d",
+   "id": "9c02234f",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0fc51b6",
+   "id": "2bc20b48",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1087ce88",
+   "id": "ff412961",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad4397c5",
+   "id": "b04f6632",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "088dea01",
+   "id": "53d4b072",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8e13ac5",
+   "id": "b6710e21",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63eb095e",
+   "id": "8c507316",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f038652b",
+   "id": "62d2caf2",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97065bff",
+   "id": "1e853a95",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e10ff902",
+   "id": "3b52416f",
    "metadata": {
     "hide-output": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2575b54",
+   "id": "df985b28",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f2700e2",
+   "id": "163421dc",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfffb76a",
+   "id": "56589dc9",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb152a3",
+   "id": "3266ca67",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7620235",
+   "id": "03fe8a08",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "910325f3",
+   "id": "0df14d6f",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbee5246",
+   "id": "a0296592",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62cb4020",
+   "id": "eaba1cc5",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73f66a9e",
+   "id": "16b40fd3",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e2f4b3",
+   "id": "a0b38dc0",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d254b698",
+   "id": "a9abc197",
    "metadata": {
     "hide-output": false
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60c91539",
+   "id": "7c94a594",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d15be9d",
+   "id": "23cf04fd",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c374d25",
+   "id": "b7c26f91",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b399fc",
+   "id": "8813d36c",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23093fbd",
+   "id": "c5f9b528",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33dbf4a3",
+   "id": "33b2f73a",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a4c496e",
+   "id": "329fcb53",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d45eedbf",
+   "id": "21eaa194",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fd930dc",
+   "id": "d6e77879",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3373103",
+   "id": "f30f88b8",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6e5762",
+   "id": "4e74e898",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cff4721",
+   "id": "7d5c353c",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19cba9eb",
+   "id": "d6cd502a",
    "metadata": {
     "hide-output": false
    },
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53425bec",
+   "id": "762e0591",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eefa906",
+   "id": "06d6eb3a",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e6f5be4",
+   "id": "57170527",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "422385c6",
+   "id": "fcdd4e7a",
    "metadata": {
     "hide-output": false
    },
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe4f9e06",
+   "id": "0a23b86c",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a22a69f9",
+   "id": "bb71e4f5",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf8cac6",
+   "id": "c7410152",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "808373b4",
+   "id": "000ac318",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f95f185b",
+   "id": "e0d2e570",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d6f73de",
+   "id": "840a7566",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfc474bf",
+   "id": "e2fc1db0",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33b63924",
+   "id": "8723524e",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e6b3000",
+   "id": "4ba7122c",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c1e1023",
+   "id": "450682d1",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cae089f",
+   "id": "dbdd9f91",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b00f8d32",
+   "id": "b744847e",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b135949f",
+   "id": "25329640",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b57559",
+   "id": "e9dee920",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "955a6284",
+   "id": "dc08775f",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "129579d6",
+   "id": "688908d4",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94d7b47c",
+   "id": "1effc660",
    "metadata": {
     "hide-output": false
    },
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dfb76ec",
+   "id": "4d14f5a9",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92133cce",
+   "id": "91db06ff",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "015fa37c",
+   "id": "8c5a19c8",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c2b4e36",
+   "id": "0532ad89",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77992ea4",
+   "id": "9f18b186",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ec92489",
+   "id": "ccb3b576",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf10e24",
+   "id": "8511d2f5",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a68cd4cc",
+   "id": "c35f1ae4",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9b5bcaa",
+   "id": "6669ae97",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be002edd",
+   "id": "0ac06cdf",
    "metadata": {
     "hide-output": false
    },
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be2b53d7",
+   "id": "09a89351",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1047,7 +1047,7 @@
   }
  ],
  "metadata": {
-  "date": 1764821802.7745464,
+  "date": 1764836278.325219,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
